提交笔记修改

--- a/操作系统笔记/操作系统知识点大纲.md
+++ b/操作系统笔记/操作系统知识点大纲.md
@@ -116,7 +116,7 @@
 ### 第十一章 磁盘管理
 1. 磁盘结构
 2. 磁盘访问时间
-3、磁盘调度算法的基本思想、执行过程
+    * 磁盘调度算法的基本思想、执行过程
 	* 先来先服务FCFS
 	* 最短寻道时间优先SSTF
 	* 扫描算法SCAN、CSCAN、N步扫描N-SCAN、FSCAN
